pushr z-index fix

--- a/public/assets/navigation/css/component.css
+++ b/public/assets/navigation/css/component.css
@@ -48,6 +48,7 @@ body,
 	opacity: 0;
 	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
 	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
+	z-index: 9999;
 }
 
 .st-menu-open .st-pusher::after {
